@@ -2358,22 +2358,22 @@
 #define NAME_xfsz (&builtin_names[2357])
 #define NAME_xfx (&builtin_names[2358])
 #define NAME_xfy (&builtin_names[2359])
-#define NAME_xor (&builtin_names[2360])
-#define NAME_xpm (&builtin_names[2361])
-#define NAME_xref (&builtin_names[2362])
-#define NAME_xrefVar (&builtin_names[2363])
-#define NAME_y (&builtin_names[2364])
-#define NAME_yCaret (&builtin_names[2365])
-#define NAME_yFrom (&builtin_names[2366])
-#define NAME_yPosition (&builtin_names[2367])
-#define NAME_yTo (&builtin_names[2368])
-#define NAME_yVar (&builtin_names[2369])
-#define NAME_yank (&builtin_names[2370])
-#define NAME_year (&builtin_names[2371])
-#define NAME_yf (&builtin_names[2372])
-#define NAME_yfx (&builtin_names[2373])
-#define NAME_yfy (&builtin_names[2374])
-#define NAME_yref (&builtin_names[2375])
-#define NAME_yrefVar (&builtin_names[2376])
-#define NAME_zoom (&builtin_names[2377])
-#define NAME_xmlString (&builtin_names[2378])
+#define NAME_xmlString (&builtin_names[2360])
+#define NAME_xor (&builtin_names[2361])
+#define NAME_xpm (&builtin_names[2362])
+#define NAME_xref (&builtin_names[2363])
+#define NAME_xrefVar (&builtin_names[2364])
+#define NAME_y (&builtin_names[2365])
+#define NAME_yCaret (&builtin_names[2366])
+#define NAME_yFrom (&builtin_names[2367])
+#define NAME_yPosition (&builtin_names[2368])
+#define NAME_yTo (&builtin_names[2369])
+#define NAME_yVar (&builtin_names[2370])
+#define NAME_yank (&builtin_names[2371])
+#define NAME_year (&builtin_names[2372])
+#define NAME_yf (&builtin_names[2373])
+#define NAME_yfx (&builtin_names[2374])
+#define NAME_yfy (&builtin_names[2375])
+#define NAME_yref (&builtin_names[2376])
+#define NAME_yrefVar (&builtin_names[2377])
+#define NAME_zoom (&builtin_names[2378])
